[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abm_initialization_tools"
version = "0.1.0"
description = "ABM Initialization Tools contains all the tools you need to initialize your agents."
readme = "README.rst"
authors = [
  {name = "Christopher Lorton", email = "bitbucket@lortons.net"}
]
maintainers = [
  {name = "Christopher Lorton", email = "bitbucket@lortons.net"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/clorton/abm_initialization_tools/issues"
changelog = "https://github.com/clorton/abm_initialization_tools/blob/master/changelog.md"
homepage = "https://github.com/clorton/abm_initialization_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

